--- a/_includes/about.html
+++ b/_includes/about.html
@@ -5,10 +5,9 @@
               <br/><br/>
               <h2>About Landing-Page</h2>
               <br/>
-                <p>Landing-Page is a free Bootstrap 3 theme created by Start Bootstrap. It can be yours right now, simply download the template on <a href="http://startbootstrap.com/template-overviews/landing-page/">the preview page</a>. The theme is open source, and you can use it for any purpose, personal or commercial.</p>
-                <p>The Jekyll version is brought to you by <a href="https://github.com/swcool">Shane Weng</a></p>
-                <p>This theme features stock photos by <a href="http://join.deathtothestockphoto.com//">Death to the Stock Photo</a>.</p>
-                <p>Landing-Page includes full HTML, CSS, and custom JavaScript files along with LESS files for easy customization.</p>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed leo tortor, volutpat quis eros vel, dignissim tristique dui. Duis sodales tortor eget nibh mollis, ut sagittis nulla scelerisque. Suspendisse ullamcorper aliquet leo sodales consectetur. In eget metus quis lorem sagittis interdum nec eu nulla. In pharetra lectus purus, a volutpat elit consectetur non. Duis ut dapibus quam, sit amet porta ligula. Duis a nibh enim. Quisque sagittis dolor et metus aliquet, nec feugiat nisl tristique. Maecenas sodales magna orci, vitae bibendum quam pharetra vel. Integer dapibus mauris nisi. Suspendisse nunc lorem, aliquam at neque in, ullamcorper mattis enim. Suspendisse non leo rutrum ante commodo tincidunt in et risus.
+
+</p>
                 <br/>
               </div>
         </div>
